Injecting user service for auto-creation of users

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -3,6 +3,7 @@
 		<title>Sign in</title>
 	</head>
 	<body>
-            <a href="https://www.facebook.com/dialog/oauth?response_type=token&client_id=255653361131262&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Ffacebook-callback.html">Get Facebook Token for localhost</a>
+            <a href="https://www.facebook.com/dialog/oauth?response_type=token&client_id=255653361131262&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Ffacebook-callback.html">Get Facebook Token for localhost</a><br />
+            <a href="https://www.facebook.com/dialog/oauth?response_type=token&client_id=333606306743106&redirect_uri=https%3A%2F%2Fblood-kh.appspot.com%2Ffacebook-callback.html">Get Facebook Token for blood-kh</a>
 	</body>
 </html>
