--- a/src/main/webapp/static/facebook-callback.html
+++ b/src/main/webapp/static/facebook-callback.html
@@ -3,13 +3,16 @@
         <title>Signin in...</title>
     </head>
     <body>
+        <h1 id="h1">Signing in...</h1>
         <script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="/js/common.js"></script>
         <script type="text/javascript" src="/js/oauth2.js"></script>
         <script type="text/javascript">
 
 $(function() {
-    var jConnection = registerFederated("/api/blood", "kh", "Bassac", "facebook");
+    var jConnection = registerFederated("/api/example", "username", "password", "facebook");
+    $("title").text("Home");
+    $("#h1").text("Hello " + jConnection.displayName + "!");
 });
         </script>
     </body>
