Register user journey

--- a/src/main/webapp/static/home.html
+++ b/src/main/webapp/static/home.html
@@ -13,10 +13,10 @@
         <div class="navbar navbar-fixed-top navbar-inverse">
             <div class="navbar-inner">
                 <div class="container">				
-                    <a id="tableName" class="brand" href="#">Loading schema...</a>
+                    <a id="tableName" class="brand" href="#">Donor Registry</a>
                     <ul class="nav">
-                        <li class="active"><a href="#all-entities" data-toggle="tab">All</a></li>
-                        <li ><a href="#create-entity" data-toggle="tab">Create</a></li>
+                        <li class="active"><a href="#all-entities" data-toggle="tab">My Page</a></li>
+<!--                        <li ><a href="#create-entity" data-toggle="tab">Create</a></li>-->
                     </ul>
                 </div>	
             </div>
