--- a/src/main/webapp/static/home.html
+++ b/src/main/webapp/static/home.html
@@ -16,9 +16,24 @@
                     <a id="tableName" class="brand" href="#">Donor Registry</a>
                     <ul class="nav">
                         <li class="active"><a href="#all-entities" data-toggle="tab">My Page</a></li>
-<!--                        <li ><a href="#create-entity" data-toggle="tab">Create</a></li>-->
+                        <!--                        <li ><a href="#create-entity" data-toggle="tab">Create</a></li>-->
                     </ul>
                 </div>	
+                <div class="nav-collapse collapse">
+                    <ul class="nav navbar-text pull-right" id="headerUser">
+                        <li><a id="headerUserAction" class="login" href="" >Login</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown"><span class="icon-white icon-user"></span> <span id="headerUsername"></span> <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li class="active" data-target="projects"><a>Profile</a></li>
+<!--                                <li data-target="templates"><a>Templates</a></li>
+                                <li data-target="languages"><a>Languages</a></li>-->
+                                <li class="divider"></li>
+                                <li><a id="headerUserAction" href="api/kh/federated/v11?_method=DELETE&redirect_uri=/index.html" >Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
@@ -51,10 +66,20 @@
         </div><!-- container -->
 
         <script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
-
         <script src="/js/bootstrap.min.js"></script>
-        <script type="text/javascript">
 
+        <script src="/js/crud_api.js"></script>
+        <script type="text/javascript">
+                            $(function() {
+                                crud_Read("api/kh/details/v10", "me")
+                                        .success(function(data) {
+                                    console.log(data);
+//                                    $("#userId").val(data.id);
+                                    $("#headerUsername").text(data.displayName);
+//                                    $("#phoneNumber").val(data.phoneNumber);
+//                                    $("#email").val(data.email);
+                                });
+                            });
         </script>
     </body>
 </html>
