--- a/src/main/webapp/static/home.html
+++ b/src/main/webapp/static/home.html
@@ -21,11 +21,10 @@
                 </div>	
                 <div class="nav-collapse collapse">
                     <ul class="nav navbar-text pull-right" id="headerUser">
-                        <li><a id="headerUserAction" class="login" href="" >Login</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown"><span class="icon-white icon-user"></span> <span id="headerUsername"></span> <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li class="active" data-target="projects"><a>Profile</a></li>
+                                <li><a href="register.html">Profile</a></li>
 <!--                                <li data-target="templates"><a>Templates</a></li>
                                 <li data-target="languages"><a>Languages</a></li>-->
                                 <li class="divider"></li>
